--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3533,4 +3533,10 @@
   <data name="_7x7" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\7x7.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="DeletebyAge" xml:space="preserve">
+    <value>Delete by Age</value>
+  </data>
+  <data name="KeepAlways" xml:space="preserve">
+    <value>Keep Always</value>
+  </data>
 </root>
