Analyze Robust.log for avatars Keep Logs, or Delete on timer radio buttons.

--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3539,4 +3539,7 @@
   <data name="KeepAlways" xml:space="preserve">
     <value>Keep Always</value>
   </data>
+  <data name="AnalyzeLogButton" xml:space="preserve">
+    <value>Analyze Log</value>
+  </data>
 </root>
