All and Noone are sticky
Readme changed to read.me

--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3542,4 +3542,7 @@
   <data name="AnalyzeLogButton" xml:space="preserve">
     <value>Analyze Log</value>
   </data>
+  <data name="TreesAndPlants" xml:space="preserve">
+    <value>Trees and Plants</value>
+  </data>
 </root>
