--- a/Installer_Src/Setup DreamWorld/My Project/Resources.el.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.el.resx
@@ -3018,4 +3018,22 @@
   <data name="ExportAllMaps" xml:space="preserve">
     <value>Εξαγωγή όλων των χαρτών</value>
   </data>
+  <data name="LandMaker" xml:space="preserve">
+    <value>Δημιουργός γης</value>
+  </data>
+  <data name="Landscaping" xml:space="preserve">
+    <value>Εξωραϊσμός</value>
+  </data>
+  <data name="DeletebyAge" xml:space="preserve">
+    <value>Διαγραφή ανά ηλικία</value>
+  </data>
+  <data name="KeepAlways" xml:space="preserve">
+    <value>Κρατήστε πάντα</value>
+  </data>
+  <data name="AnalyzeLogButton" xml:space="preserve">
+    <value>Αναλύστε το αρχείο καταγραφής</value>
+  </data>
+  <data name="TreesAndPlants" xml:space="preserve">
+    <value>Δέντρα και φυτά</value>
+  </data>
 </root>
