Skip non smart code in signs Add settable radius to plants Trees plant nicely. Quantity translation was wrong

--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3545,4 +3545,10 @@
   <data name="TreesAndPlants" xml:space="preserve">
     <value>Trees and Plants</value>
   </data>
+  <data name="Quantity_word" xml:space="preserve">
+    <value>Quantity</value>
+  </data>
+  <data name="Radius_Word" xml:space="preserve">
+    <value>Radius</value>
+  </data>
 </root>
