Reboot when any region is chosen

--- a/Installer_Src/Setup DreamWorld/FormSmartStart.resx
+++ b/Installer_Src/Setup DreamWorld/FormSmartStart.resx
@@ -321,7 +321,7 @@
         redti7H/AAibqSh3vSmlAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="FreezeButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="BakeButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
         EgAACxIB0t1+/AAAAAd0SU1FB+UDCwcPFmz/YlsAAAUJSURBVEhLtVXtU1RVHN7/qpm+9bUPNZNODr1M
