--- a/Installer_Src/Setup DreamWorld/FormSmartStart.resx
+++ b/Installer_Src/Setup DreamWorld/FormSmartStart.resx
@@ -155,6 +155,60 @@
   <metadata name="MenuStrip4.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>461, 17</value>
   </metadata>
+  <data name="BakeButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EgAACxIB0t1+/AAAAAd0SU1FB+UDCwcPFmz/YlsAAAUJSURBVEhLtVXtU1RVHN7/qpm+9bUPNZNODr1M
+        Mc6oieXLjDlTNhQKOZYWu4lJyFiDhiRCQEJApmigIosgsCxv8iYssLB3d+/u3n259+l57rJCDR9rdn5z
+        z557zu95+f3OuR4A/2vsOKlwHHiSGXjmDWB4xYF/OR+BVQczGw6WYg4iSQdW1nHX7pRD8WJgc1E4BYxv
+        AE9CwAMmexyyMRW1MRDNoHIuiUOBOErG4qidt9C5lMFAKIemmQx842l4GXWTGbROZxEM2yiAuuizBpMt
+        OZiNOIimHaRzDhKM6WQOg7Es7kcyeGBk8ONSCr0cr2UIzHfPGA85f2PFwskpE4dGYjhOAkf7TUyv55if
+        ALbjeH4OZDGTyGEjQ8mUwjk3NDayNmJZB6F0DkuMlbTtAixbNv5YT6NswsSugShe7o3gtfsGXnkcwfsj
+        UXRNWnmAnO14qkYtl9215ZTLRqwXrRyiTJ4hiEk1hZ+ADQI0hizsG43hCzI/TOsuLiTxDhPvGjJQxGdL
+        gH4XALwjKZQ/S+BLxvnZfLSHLdzdSCNoZnGbTPWMEzBNwDgVdYTT7p5fVy2cmjFdi959GsWbwwb2jkXR
+        PJbcAjg/lMRpLtaGMy6QiToqauLmmyspXHmeQkMo5fr9NJ5FL5/fziXw+bSJW2uWu08A75H5XqoqItBv
+        Y4ktgLNDCXxN1ucYvvm8Atl1nUkVeicLmgko39uY9BwBTpP5TVpaSiCBFRPgbSYXQNuouQVQOSjmJr5i
+        om+4UQpamUQg3Uwo4O8IrP+ab2cI1Mu1nbSygusrqOJwMI4KghYToD2wTUH1cAKXFpO4QJaSfoQLG8ns
+        KhP+QgUC+IHvNb61lnaVeHkudDbUHOVMKku98/n9e54Y6ApuA7jOglwgQ7FUSLqs6ImkXaAuFvQe+/8O
+        5+6w8L/zf/MmAamq2SR3IBDDbnbRbj8Bxrdb5I8TPYEqLpJFGnfQhr+YVAUWa53mWR6shVQOAXaUrFN9
+        bhNQe6oJ8gEBSsYZBLk3tU3BJX/MZdZC6bKhkwyVpJ7j89ysAspvtaTetfKpblMdpMY7k0QtyZWMx935
+        UnZSz3aAqoGY29dK+PFEnLIt9zBpcxmTH2NNNP8TfZ5IZPGYatT7Apzk/waqrGI9PiLAWyzwEVr0cHbz
+        HNgE8PVHXQ/FSIwld4inWf6e5dynU3F8MikbkwgyYT8BpEqW6o7SvmPBGF56tIGjahCy9/NdHoB3UR0t
+        0iFq4vE/yWRirMLKNhW7lgzVRbJGCgReSSIqch/r1PCcp3nSxJ7hKF4dNLD/3jqCbIIXAJf7WXUmrGMi
+        tajYVtPXRM52754k76I5FneSF+LUpgLVa5Sn2h/LF192ikA97T3aHUbcsgvXteOpeWDAR0alPO5XF1MY
+        DGfQw86ZZ9Is7x6ucYH0LIw1r+ta95RUqrU/HI3ixJ/raBlNaN3WB2diNYODjaso643h4gRPJ5PLMtWg
+        j08xVzEVUqVr/BFVXCGZEaqoYkHPPOHHqGnF7R65orwvAEjIsxDJod5vorw7iv2NYZxo20BpXxw+brjI
+        qKTH7bRA7atD52PBK9mSLQT5rMfA8eZVLBpZptv6XCr+8acQRspGz3QK398xcKg+jKJrKzjQuo5T/FLd
+        mLPQRp9rCeALmjh4I4QLdyPut3mnXDtO/jsiSRvdQbZxRxj76pbxes0i3mAUX15EH5uh4PdOsePkfxfw
+        /A0VKJk9cvvF2QAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="RevertButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAAAAd0SU1FB9MKBhQRBHg+b/kAAASVSURBVEhL3ZULTNVVHMd/XLiAITICFbgB7coG
+        ydQURUkehmImoIBaKjKSpUUmMSOikIcINxMNhbpAgGEiD4ESS1LwifaASVBoa4tlprKyZlaUVni/fQ9E
+        4rKH1dbWb/vs/vc753zP+T3OufJfm9kQ/iWbXu0gATVxElBplBmVFRK8Y6sElUSLLmQkRy3I39zMb7dW
+        /CtzJLK51yPzLEJ39mFpAzC/4gq8Mk7DatHez2RmbrKIrQNnq41uwvwatOL30hsuqeewbC/6hcOrgXk1
+        QNwe4OkjwJPkTsPHkDDjARk1bRxXWZO/GI3/ToPz2vMIqgDc8gHPQmByKRBYDoTQd28lI+Fmic1AxMu9
+        kPkVHTJy/DSuvIX8ySaB1S7aqKbLXhR0K6B4Mcm9BC9DD/yM3yCyHoiqAxbWAkv4vZIRLqr8DjKv9LhY
+        jJhIhWEDQrS4Y5YS3mzDryGN4ftCsmPaBbgbAZeMC5BZxd0yZkGt6O7eLmPjdlkurO+ZVfI1YpmqmFcH
+        UrZ6PxBW9gXnGrZTwZNYymOnXIcntva4PNX5vUSVr6DPnpiLTC183ZXiupxLkAlrjoiZZgcH1pPl5D6x
+        sn1IAjbsn/H853i4kRG8BjzKKFIOM9KsD/rkjvA1nKeT+LbGkhN9qPsIMF9W9x59IcRONCFVH3psAywj
+        Gy6JuZUSTySTyGhyK3ESC6spMsfYpFKzeh+QwAiSm4DUQ4BE13bJrJy0+dt6TPltgOFN+kK3tnBdAtGJ
+        Nnz3p3pGIN4JjXTkkqlE5XWweOrXWpwm+mgfaDyTdABIongyC555FJhdfB42j7f+uIXiOceBR/Z8Cxl/
+        fxXXqA1cxGJufbcu60uILricjlVER27UGdYSvP5B303dplQKq9NnsnWz+Z1+yIRnjgGbefp7Ss5BHD1K
+        OX8xYQZmlB8dnXIaYj/WSEcUUcW53uKbR0hEhb04eDrL4tqWJ5pMSGcN1qkNWoANFN9A8QJGoc9+v1c0
+        5oVcFUSYielGo92KVshw1+foCCaqzQbNTFZ2bnNN6brqlXkS+vQuk1NK+9UFFRexnidXp1cn30hxdfqi
+        E0x13K42rlOp9iaqi3KjNaH1EBudgY67iLqhAxbb4eWd3W06cn6geOt42n4onMVfw6D4W0B+K5B28Aok
+        MKGWK/mkiBthqvUxo2ROTa/YeWTQ4UusyIBNNtholu9r9887g1WNJqxlShT9uecGG1lUJb7lHeDFdl7A
+        Gt4NN58yrowhjv0aNAuZU7VLRk1K4rcPubaBiEaG2evFKypD5hY0uad3Xl5S+RWepegmsvltII8U8PTl
+        HcC4ok9+EAvrYq6bSX5NtZno/G+nlnJ6EMt+7zVTKdOT2WLrnChTVpSYxzedCjCeNWUc/gllnUDpu0Dt
+        SUCbdLCT81Qt1WN43YurRNWl+r3Hi8USW3IbUZdwkbj5ZknoxlecsjouxtZfxNJ6tnpgfA3HUog7+Y2O
+        ctxIfKipcZVCdZgxJEi0NitlQmSeeIcViZmZ6p6IX8b/sWmIitiJqJZULR5A1EW9yT+kPzYVlRJURVWo
+        dP5vTORnWQFD08bQsTEAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="NextButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAK
@@ -217,6 +271,18 @@
   </data>
   <metadata name="MenuStrip3.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>346, 17</value>
+  </metadata>
+  <metadata name="MenuStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>231, 17</value>
+  </metadata>
+  <metadata name="MenuStrip5.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>576, 17</value>
+  </metadata>
+  <metadata name="MenuStrip6.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>691, 17</value>
+  </metadata>
+  <metadata name="MenuStrip4.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>461, 17</value>
   </metadata>
   <data name="LoadTerrain.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -319,60 +385,6 @@
         F/Gy3meOY6eyoXvOMJ/oetYvqj5iXdTTBKm8SXE4qyk7t6BJk6NrSk5VNcXGSZv8Fq96yry203MEv3pE
         WlhHCe95KMGTtyvuZkvwni0jfib4Fosh9r0Bfo8/w3+L/Pk2Pf//4iadCEeC95D2L/MkvN4Av8fbwZ99
         redti7H/AAibqSh3vSmlAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="BakeButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EgAACxIB0t1+/AAAAAd0SU1FB+UDCwcPFmz/YlsAAAUJSURBVEhLtVXtU1RVHN7/qpm+9bUPNZNODr1M
-        Mc6oieXLjDlTNhQKOZYWu4lJyFiDhiRCQEJApmigIosgsCxv8iYssLB3d+/u3n259+l57rJCDR9rdn5z
-        z557zu95+f3OuR4A/2vsOKlwHHiSGXjmDWB4xYF/OR+BVQczGw6WYg4iSQdW1nHX7pRD8WJgc1E4BYxv
-        AE9CwAMmexyyMRW1MRDNoHIuiUOBOErG4qidt9C5lMFAKIemmQx842l4GXWTGbROZxEM2yiAuuizBpMt
-        OZiNOIimHaRzDhKM6WQOg7Es7kcyeGBk8ONSCr0cr2UIzHfPGA85f2PFwskpE4dGYjhOAkf7TUyv55if
-        ALbjeH4OZDGTyGEjQ8mUwjk3NDayNmJZB6F0DkuMlbTtAixbNv5YT6NswsSugShe7o3gtfsGXnkcwfsj
-        UXRNWnmAnO14qkYtl9215ZTLRqwXrRyiTJ4hiEk1hZ+ADQI0hizsG43hCzI/TOsuLiTxDhPvGjJQxGdL
-        gH4XALwjKZQ/S+BLxvnZfLSHLdzdSCNoZnGbTPWMEzBNwDgVdYTT7p5fVy2cmjFdi959GsWbwwb2jkXR
-        PJbcAjg/lMRpLtaGMy6QiToqauLmmyspXHmeQkMo5fr9NJ5FL5/fziXw+bSJW2uWu08A75H5XqoqItBv
-        Y4ktgLNDCXxN1ucYvvm8Atl1nUkVeicLmgko39uY9BwBTpP5TVpaSiCBFRPgbSYXQNuouQVQOSjmJr5i
-        om+4UQpamUQg3Uwo4O8IrP+ab2cI1Mu1nbSygusrqOJwMI4KghYToD2wTUH1cAKXFpO4QJaSfoQLG8ns
-        KhP+QgUC+IHvNb61lnaVeHkudDbUHOVMKku98/n9e54Y6ApuA7jOglwgQ7FUSLqs6ImkXaAuFvQe+/8O
-        5+6w8L/zf/MmAamq2SR3IBDDbnbRbj8Bxrdb5I8TPYEqLpJFGnfQhr+YVAUWa53mWR6shVQOAXaUrFN9
-        bhNQe6oJ8gEBSsYZBLk3tU3BJX/MZdZC6bKhkwyVpJ7j89ysAspvtaTetfKpblMdpMY7k0QtyZWMx935
-        UnZSz3aAqoGY29dK+PFEnLIt9zBpcxmTH2NNNP8TfZ5IZPGYatT7Apzk/waqrGI9PiLAWyzwEVr0cHbz
-        HNgE8PVHXQ/FSIwld4inWf6e5dynU3F8MikbkwgyYT8BpEqW6o7SvmPBGF56tIGjahCy9/NdHoB3UR0t
-        0iFq4vE/yWRirMLKNhW7lgzVRbJGCgReSSIqch/r1PCcp3nSxJ7hKF4dNLD/3jqCbIIXAJf7WXUmrGMi
-        tajYVtPXRM52754k76I5FneSF+LUpgLVa5Sn2h/LF192ikA97T3aHUbcsgvXteOpeWDAR0alPO5XF1MY
-        DGfQw86ZZ9Is7x6ucYH0LIw1r+ta95RUqrU/HI3ixJ/raBlNaN3WB2diNYODjaso643h4gRPJ5PLMtWg
-        j08xVzEVUqVr/BFVXCGZEaqoYkHPPOHHqGnF7R65orwvAEjIsxDJod5vorw7iv2NYZxo20BpXxw+brjI
-        qKTH7bRA7atD52PBK9mSLQT5rMfA8eZVLBpZptv6XCr+8acQRspGz3QK398xcKg+jKJrKzjQuo5T/FLd
-        mLPQRp9rCeALmjh4I4QLdyPut3mnXDtO/jsiSRvdQbZxRxj76pbxes0i3mAUX15EH5uh4PdOsePkfxfw
-        /A0VKJk9cvvF2QAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="RevertButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAAAd0SU1FB9MKBhQRBHg+b/kAAASVSURBVEhL3ZULTNVVHMd/XLiAITICFbgB7coG
-        ydQURUkehmImoIBaKjKSpUUmMSOikIcINxMNhbpAgGEiD4ESS1LwifaASVBoa4tlprKyZlaUVni/fQ9E
-        4rKH1dbWb/vs/vc753zP+T3OufJfm9kQ/iWbXu0gATVxElBplBmVFRK8Y6sElUSLLmQkRy3I39zMb7dW
-        /CtzJLK51yPzLEJ39mFpAzC/4gq8Mk7DatHez2RmbrKIrQNnq41uwvwatOL30hsuqeewbC/6hcOrgXk1
-        QNwe4OkjwJPkTsPHkDDjARk1bRxXWZO/GI3/ToPz2vMIqgDc8gHPQmByKRBYDoTQd28lI+Fmic1AxMu9
-        kPkVHTJy/DSuvIX8ySaB1S7aqKbLXhR0K6B4Mcm9BC9DD/yM3yCyHoiqAxbWAkv4vZIRLqr8DjKv9LhY
-        jJhIhWEDQrS4Y5YS3mzDryGN4ftCsmPaBbgbAZeMC5BZxd0yZkGt6O7eLmPjdlkurO+ZVfI1YpmqmFcH
-        UrZ6PxBW9gXnGrZTwZNYymOnXIcntva4PNX5vUSVr6DPnpiLTC183ZXiupxLkAlrjoiZZgcH1pPl5D6x
-        sn1IAjbsn/H853i4kRG8BjzKKFIOM9KsD/rkjvA1nKeT+LbGkhN9qPsIMF9W9x59IcRONCFVH3psAywj
-        Gy6JuZUSTySTyGhyK3ESC6spMsfYpFKzeh+QwAiSm4DUQ4BE13bJrJy0+dt6TPltgOFN+kK3tnBdAtGJ
-        Nnz3p3pGIN4JjXTkkqlE5XWweOrXWpwm+mgfaDyTdABIongyC555FJhdfB42j7f+uIXiOceBR/Z8Cxl/
-        fxXXqA1cxGJufbcu60uILricjlVER27UGdYSvP5B303dplQKq9NnsnWz+Z1+yIRnjgGbefp7Ss5BHD1K
-        OX8xYQZmlB8dnXIaYj/WSEcUUcW53uKbR0hEhb04eDrL4tqWJ5pMSGcN1qkNWoANFN9A8QJGoc9+v1c0
-        5oVcFUSYielGo92KVshw1+foCCaqzQbNTFZ2bnNN6brqlXkS+vQuk1NK+9UFFRexnidXp1cn30hxdfqi
-        E0x13K42rlOp9iaqi3KjNaH1EBudgY67iLqhAxbb4eWd3W06cn6geOt42n4onMVfw6D4W0B+K5B28Aok
-        MKGWK/mkiBthqvUxo2ROTa/YeWTQ4UusyIBNNtholu9r9887g1WNJqxlShT9uecGG1lUJb7lHeDFdl7A
-        Gt4NN58yrowhjv0aNAuZU7VLRk1K4rcPubaBiEaG2evFKypD5hY0uad3Xl5S+RWepegmsvltII8U8PTl
-        HcC4ok9+EAvrYq6bSX5NtZno/G+nlnJ6EMt+7zVTKdOT2WLrnChTVpSYxzedCjCeNWUc/gllnUDpu0Dt
-        SUCbdLCT81Qt1WN43YurRNWl+r3Hi8USW3IbUZdwkbj5ZknoxlecsjouxtZfxNJ6tnpgfA3HUog7+Y2O
-        ctxIfKipcZVCdZgxJEi0NitlQmSeeIcViZmZ6p6IX8b/sWmIitiJqJZULR5A1EW9yT+kPzYVlRJURVWo
-        dP5vTORnWQFD08bQsTEAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="ApplyPlantButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
