--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -1072,9 +1072,6 @@
   <data name="user1_into" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\user1_into.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="X" xml:space="preserve">
-    <value>Y</value>
-  </data>
   <data name="JOpensimSettings" xml:space="preserve">
     <value>JOpensim Settings</value>
   </data>
@@ -3571,5 +3568,8 @@
   </data>
   <data name="ScriptsHelp" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ScriptsHelp.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="X" xml:space="preserve">
+    <value>X</value>
   </data>
 </root>
