--- a/Installer_Src/Setup DreamWorld/My Project/Resources.ar-SA.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.ar-SA.resx
@@ -3036,4 +3036,10 @@
   <data name="TreesAndPlants" xml:space="preserve">
     <value>الأشجار والنباتات</value>
   </data>
+  <data name="Quantity_word" xml:space="preserve">
+    <value>كمية</value>
+  </data>
+  <data name="Radius_Word" xml:space="preserve">
+    <value>نصف القطر</value>
+  </data>
 </root>
