--- a/Installer_Src/Setup DreamWorld/My Project/Resources.el.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.el.resx
@@ -3036,4 +3036,10 @@
   <data name="TreesAndPlants" xml:space="preserve">
     <value>Δέντρα και φυτά</value>
   </data>
+  <data name="Quantity_word" xml:space="preserve">
+    <value>Ποσότητα</value>
+  </data>
+  <data name="Radius_Word" xml:space="preserve">
+    <value>Ακτίνα κύκλου</value>
+  </data>
 </root>
