--- a/Installer_Src/Setup DreamWorld/My Project/Resources.es-MX.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.es-MX.resx
@@ -3036,4 +3036,10 @@
   <data name="TreesAndPlants" xml:space="preserve">
     <value>Árboles y Plantas</value>
   </data>
+  <data name="Quantity_word" xml:space="preserve">
+    <value>Cantidad</value>
+  </data>
+  <data name="Radius_Word" xml:space="preserve">
+    <value>Radio</value>
+  </data>
 </root>
