--- a/Installer_Src/Setup DreamWorld/My Project/Resources.fi.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.fi.resx
@@ -3036,4 +3036,10 @@
   <data name="TreesAndPlants" xml:space="preserve">
     <value>Puut ja kasvit</value>
   </data>
+  <data name="Quantity_word" xml:space="preserve">
+    <value>Määrä</value>
+  </data>
+  <data name="Radius_Word" xml:space="preserve">
+    <value>Säde</value>
+  </data>
 </root>
