--- a/Installer_Src/Setup DreamWorld/My Project/Resources.is.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.is.resx
@@ -3036,4 +3036,10 @@
   <data name="TreesAndPlants" xml:space="preserve">
     <value>Tré og plöntur</value>
   </data>
+  <data name="Quantity_word" xml:space="preserve">
+    <value>Magn</value>
+  </data>
+  <data name="Radius_Word" xml:space="preserve">
+    <value>Radíus</value>
+  </data>
 </root>
