--- a/Installer_Src/Setup DreamWorld/My Project/Resources.sv.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.sv.resx
@@ -3036,4 +3036,10 @@
   <data name="TreesAndPlants" xml:space="preserve">
     <value>Träd och växter</value>
   </data>
+  <data name="Quantity_word" xml:space="preserve">
+    <value>Kvantitet</value>
+  </data>
+  <data name="Radius_Word" xml:space="preserve">
+    <value>Radie</value>
+  </data>
 </root>
