--- a/Installer_Src/Setup DreamWorld/My Project/Resources.tr.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.tr.resx
@@ -3036,4 +3036,10 @@
   <data name="TreesAndPlants" xml:space="preserve">
     <value>Ağaçlar ve Bitkiler</value>
   </data>
+  <data name="Quantity_word" xml:space="preserve">
+    <value>Miktar</value>
+  </data>
+  <data name="Radius_Word" xml:space="preserve">
+    <value>Yarıçap</value>
+  </data>
 </root>
