--- a/Installer_Src/Setup DreamWorld/My Project/Resources.resx
+++ b/Installer_Src/Setup DreamWorld/My Project/Resources.resx
@@ -3572,4 +3572,13 @@
   <data name="X" xml:space="preserve">
     <value>X</value>
   </data>
+  <data name="Level_word" xml:space="preserve">
+    <value>Level</value>
+  </data>
+  <data name="Age" xml:space="preserve">
+    <value>Age</value>
+  </data>
+  <data name="Birthday_word" xml:space="preserve">
+    <value>Birthday</value>
+  </data>
 </root>
